--- a/web/templates/work/form.html.eex
+++ b/web/templates/work/form.html.eex
@@ -12,6 +12,18 @@
   </div>
 
   <div class="form-group">
+    <%= label f, :inserted_at, class: "control-label" %>
+    <%= datetime_select f, :inserted_at, class: "form-control" %>
+    <%= error_tag f, :complete %>
+  </div>
+
+  <div class="form-group">
+    <%= label f, :updated_at, class: "control-label" %>
+    <%= datetime_select f, :updated_at, class: "form-control" %>
+    <%= error_tag f, :complete %>
+  </div>
+
+  <div class="form-group">
     <%= submit "Submit", class: "btn btn-primary" %>
   </div>
 <% end %>
