--- a/web/templates/work/switch.html.eex
+++ b/web/templates/work/switch.html.eex
@@ -18,6 +18,7 @@
     http.onreadystatechange = function() {//Call a function when the state changes.
       if(http.readyState == 4 && http.status == 200) {
           playAudio(http.responseText);
+          window.alert('Now working on: ' + http.responseText);
       }
     }
     http.send(params);
