--- a/web/static/css/button.css
+++ b/web/static/css/button.css
@@ -19,7 +19,8 @@ h1 {
   border: 0;
   margin: 1em;
   outline: none;
-  background-color: #c2290a;
+  background-color: white;
+  color: black;
   border-radius: 50%;
   cursor: pointer;
   transition: box-shadow 200ms;
@@ -30,13 +31,17 @@ h1 {
   user-select: none;
 }
 
-
 .push--flat {
-  box-shadow: inset 0 2.5px 0 #da2e0b, inset 0 -2.5px 0 #aa2409, inset 0 0 0 2.5px #b32609, inset 0 0 0 10px #c2290a, inset 0 0 0 12px #611405, inset 0 0 0 16.08696px black, inset 0 0 0 16px rgba(247, 133, 110, 0.7), inset 0 0 0 24px #c2290a, inset 0 34px 24px #aa2409, inset 0 0 12px 30px #911f08, 0 12px 0 rgba(0, 0, 0, 0.3);
+  box-shadow: inset 0 2.5px 0 #FFFFFF, inset 0 -2.5px 0 #FFFFFF, inset 0 0 0 2.5px #FFFFFF, inset 0 0 0 10px #FFFFFF, inset 0 0 0 12px #FFFFFF, inset 0 0 0 16.08696px black, inset 0 0 0 16px rgba(247, 133, 110, 0.7), inset 0 0 0 24px #FFFFFF, inset 0 34px 24px #D1D1D1, inset 0 0 12px 30px #D1D1D1, 0 12px 0 rgba(0, 0, 0, 0.3);
 }
 
+/*
+.push--flat {
+  box-shadow: inset 0 2.5px 0 #da2e0b, inset 0 -2.5px 0 #aa2409, inset 0 0 0 2.5px #b32609, inset 0 0 0 10px #c2290a, inset 0 0 0 12px #611405, inset 0 0 0 16.08696px black, inset 0 0 0 16px rgba(247, 133, 110, 0.7), inset 0 0 0 24px #c2290a, inset 0 34px 24px #aa2409, inset 0 0 12px 30px #911f08, 0 12px 0 rgba(0, 0, 0, 0.3);
+}*/
+
 /* White */
-.push:nth-child(1) {
+/*.push:nth-child(1) {
   background-color: #FFFFFF;
   color: black;
 }
@@ -51,7 +56,7 @@ h1 {
 }
 
 /* BLACK */
-.push:nth-child(2) {
+/*.push:nth-child(2) {
   background-color: #000000;
   color: white;
 }
@@ -63,10 +68,10 @@ h1 {
 .push--flat:active:nth-child(2), .push--flat.is-pushed:nth-child(2) {
   box-shadow: inset 0 2.5px 0 #000000, inset 0 -2.5px 0 #000000, inset 0 0 0 2.5px #000000, inset 0 0 0 10px #000000, inset 0 0 0 12px #000000, inset 0 0 0 16.23529px #AAAAAA, inset 0 0 0 16px rgba(247, 133, 110, 0.2), inset 0 0 0 2.63636px #888888, inset 0 48px 12px #000000, inset 0 0 16px 20px #888888, 0 12px 0 rgba(0, 0, 0, 0.3);
   background-color: #000000;
-}
+}*/
 
 /* GREY */
-.push:nth-child(3) {
+/*.push:nth-child(3) {
   background-color: #D1D1D1;
   color: black;
 }
@@ -78,11 +83,11 @@ h1 {
 .push--flat:active:nth-child(3), .push--flat.is-pushed:nth-child(3) {
   box-shadow: inset 0 2.5px 0 #D1D1D1, inset 0 -2.5px 0 #D1D1D1, inset 0 0 0 2.5px #D1D1D1, inset 0 0 0 10px #D1D1D1, inset 0 0 0 12px #D1D1D1, inset 0 0 0 16.23529px black, inset 0 0 0 16px rgba(247, 133, 110, 0.2), inset 0 0 0 2.63636px #AAAAAA, inset 0 48px 12px #D1D1D1, inset 0 0 16px 20px #AAAAAA, 0 12px 0 rgba(0, 0, 0, 0.3);
   background-color: #D1D1D1;
-}
+}*/
 
 
 /* BLUE */
-.push:nth-child(4) {
+/*.push:nth-child(4) {
   background-color: #0B60DA;
 }
 
@@ -93,10 +98,10 @@ h1 {
 .push--flat:active:nth-child(4), .push--flat.is-pushed:nth-child(4) {
   box-shadow: inset 0 2.5px 0 #0B60DA, inset 0 -2.5px 0 #0B60DA, inset 0 0 0 2.5px #0B60DA, inset 0 0 0 10px #0B60DA, inset 0 0 0 12px #0B60DA, inset 0 0 0 16.23529px black, inset 0 0 0 16px rgba(247, 133, 110, 0.2), inset 0 0 0 2.63636px #07439A, inset 0 48px 12px #0B60DA, inset 0 0 16px 20px #07439A, 0 12px 0 rgba(0, 0, 0, 0.3);
   background-color: #0B60DA;
-}
+}*/
 
 /* YELLOW */
-.push:nth-child(6) {
+/*.push:nth-child(6) {
   background-color: #F8E81C;
   color: black;
 }
@@ -108,10 +113,10 @@ h1 {
 .push--flat:active:nth-child(6), .push--flat.is-pushed:nth-child(2) {
   box-shadow: inset 0 2.5px 0 #F8E81C, inset 0 -2.5px 0 #F8E81C, inset 0 0 0 2.5px #F8E81C, inset 0 0 0 10px #F8E81C, inset 0 0 0 12px #F8E81C, inset 0 0 0 16.23529px black, inset 0 0 0 16px rgba(247, 133, 110, 0.2), inset 0 0 0 2.63636px #CBBE14, inset 0 48px 12px #F8E81C, inset 0 0 16px 20px #CBBE14, 0 12px 0 rgba(0, 0, 0, 0.3);
   background-color: #F8E81C;
-}
+}*/
 
 /* GREEN */
-.push:nth-child(7) {
+/*.push:nth-child(7) {
   background-color: #7ED321;
   color: black;
 }
@@ -123,7 +128,7 @@ h1 {
 .push--flat:active:nth-child(7), .push--flat.is-pushed:nth-child(2) {
   box-shadow: inset 0 2.5px 0 #7ED321, inset 0 -2.5px 0 #7ED321, inset 0 0 0 2.5px #7ED321, inset 0 0 0 10px #7ED321, inset 0 0 0 12px #7ED321, inset 0 0 0 16.23529px black, inset 0 0 0 16px rgba(247, 133, 110, 0.2), inset 0 0 0 2.63636px #64A61C, inset 0 48px 12px #7ED321, inset 0 0 16px 20px #64A61C, 0 12px 0 rgba(0, 0, 0, 0.3);
   background-color: #7ED321;
-}
+}*/
 
 .push--flat:after {
   content: '';
