--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -7,13 +7,23 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>TimeKeeper</title>
+    <title>TimeKeeper!!!</title>
     <link rel="stylesheet" href="<%= static_path(@conn, "/css/app.css") %>">
   </head>
 
   <body>
-    <div class="container">
 
+      <!-- <h2><%= gettext "Welcome to %{name}", name: "Phoenix!" %></h2>
+      <p class="lead">A productive web framework that<br />does not compromise speed and maintainability.</p> -->
+    </div>
+    <div class="container">
+      <div class="jumbotron nav">
+        <div class="container" style="text-align: left;">
+          <a href="/login">Login</a> |
+          <a href="/jobs">Manage Jobs</a> |
+          <a href="/buttons">Manage Board</a>
+        </div>
+      </div>
       <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
       <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
 
