--- a/web/templates/addict/login.html.eex
+++ b/web/templates/addict/login.html.eex
@@ -15,6 +15,9 @@
         <div class="addict modal__footer">
           <button id="btn-login" class="addict btn">Login</button>
         </div>
+        <br/>
+        <a class="addict link" href="/register">New User? Register here!</a>
+        <br/>
         <a class="addict link" href="/recover_password">Forgot your password?</a>
       </div>
      </div>
