--- a/web/templates/work/dashboard.html.eex
+++ b/web/templates/work/dashboard.html.eex
@@ -9,7 +9,7 @@
 <h4>Currently working on: <%= @current_job %></h4>
 <h4>Total hours this pay period: <%= @total_time %></h4>
 <br/>
-<%= link "Current Pay Period Hours", to: work_path(@conn, :job_work) %>
+<%= button "Current Pay Period Hours", to: work_path(@conn, :job_work) %>
 <br/><br/>
 <h4>Or, select a date range to view work hours:</h4>
 <h4>Begin Date</h4>
